add Report for user and for project, and fix bugs after feedback in project and timesheet